<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<!--https://github.com/spring-projects/spring-boot/releases -->
		<version>4.0.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>de.webalf</groupId>
	<artifactId>seymour</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Seymour</name>
	<description>Discord Bot including useful utilities not requiring persistent storage</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!--Versions-->
		<maven.compiler.release>25</maven.compiler.release>
		<!--https://github.com/atteo/classindex/tags -->
		<classindex.version>3.13</classindex.version>
		<!--https://github.com/DV8FromTheWorld/JDA/releases -->
		<jda.version>6.3.0</jda.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.atteo.classindex</groupId>
			<artifactId>classindex</artifactId>
			<version>${classindex.version}</version>
		</dependency>

		<!--Discord-->
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>${jda.version}</version>
			<exclusions>
				<exclusion>
					<groupId>club.minnced</groupId>
					<artifactId>opus-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.crypto.tink</groupId>
					<artifactId>tink</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<includeTools>false</includeTools>
					<excludes>
						<exclude>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
						</exclude>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.atteo.classindex</groupId>
							<artifactId>classindex</artifactId>
							<version>${classindex.version}</version>
						</path>
						<dependency>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>${project.parent.version}</version>
						</dependency>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/application.properties</exclude>
				</excludes>
			</resource>
		</resources>
	</build>

	<profiles>
		<profile>
			<id>dev</id>
			<build>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
					</resource>
				</resources>
			</build>
		</profile>
	</profiles>

</project>
